--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -889,12 +889,12 @@
     <EmbeddedResource Include="..\SHC_AIV\aiv\wolf8.aiv">
       <Link>EvreyImproved\wolf8.aiv</Link>
     </EmbeddedResource>
-    <EmbeddedResource Include="CodeBlocks\c_arabwall.block" />
-    <EmbeddedResource Include="CodeBlocks\c_arabxbow.block" />
+    <EmbeddedResource Include="CodeBlocks\u_arabwall.block" />
+    <EmbeddedResource Include="CodeBlocks\u_arabxbow.block" />
     <EmbeddedResource Include="CodeBlocks\ai_wepbuy_frederick.block" />
     <EmbeddedResource Include="CodeBlocks\ai_wepbuy_marshal.block" />
-    <EmbeddedResource Include="CodeBlocks\c_spearbow.block" />
-    <EmbeddedResource Include="CodeBlocks\c_spearxbow.block" />
+    <EmbeddedResource Include="CodeBlocks\u_spearbow.block" />
+    <EmbeddedResource Include="CodeBlocks\u_spearxbow.block" />
     <EmbeddedResource Include="CodeBlocks\menuversion.block" />
     <EmbeddedResource Include="CodeBlocks\ai_recruitinterval.block" />
     <EmbeddedResource Include="CodeBlocks\ai_recruitsleep.block" />
@@ -906,7 +906,7 @@
     <EmbeddedResource Include="CodeBlocks\ai_wepbuy_abbot.block" />
     <EmbeddedResource Include="CodeBlocks\ai_wepbuy_emir.block" />
     <EmbeddedResource Include="CodeBlocks\ai_addattack.block" />
-    <EmbeddedResource Include="CodeBlocks\ai_foodbuy.block" />
+    <EmbeddedResource Include="CodeBlocks\ai_foodbuy_wazir.block" />
     <EmbeddedResource Include="CodeBlocks\u_ladderarmor_bow.block" />
     <EmbeddedResource Include="CodeBlocks\u_ladderarmor_sling.block" />
     <EmbeddedResource Include="CodeBlocks\u_ladderarmor_xbow.block" />
