--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -931,6 +931,12 @@
     <EmbeddedResource Include="CodeBlocks\ai_tethers.block" />
     <EmbeddedResource Include="CodeBlocks\o_onlyai.block" />
     <EmbeddedResource Include="CodeBlocks\o_playercolor_list.block" />
+    <EmbeddedResource Include="CodeBlocks\o_playercolor_emblem1.block" />
+    <EmbeddedResource Include="CodeBlocks\o_playercolor_emblem2.block" />
+    <EmbeddedResource Include="CodeBlocks\o_playercolor_minimap.block" />
+    <EmbeddedResource Include="CodeBlocks\o_playercolor_mm_emblem1.block" />
+    <EmbeddedResource Include="CodeBlocks\o_playercolor_mm_emblem2.block" />
+    <EmbeddedResource Include="CodeBlocks\o_playercolor_mm_shields.block" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
