--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -1110,6 +1110,8 @@
     <EmbeddedResource Include="CodeBlocks\o_keys_loadname.block" />
     <EmbeddedResource Include="CodeBlocks\o_keys_l.block" />
     <EmbeddedResource Include="CodeBlocks\o_onlyai_reset.block" />
+    <EmbeddedResource Include="CodeBlocks\ai_rebuildwalls.block" />
+    <EmbeddedResource Include="CodeBlocks\ai_rebuildtowers.block" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
