--- a/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
+++ b/UnofficialCrusaderPatch/UnofficialCrusaderPatch.csproj
@@ -1112,6 +1112,8 @@
     <EmbeddedResource Include="CodeBlocks\o_onlyai_reset.block" />
     <EmbeddedResource Include="CodeBlocks\ai_rebuildwalls.block" />
     <EmbeddedResource Include="CodeBlocks\ai_rebuildtowers.block" />
+    <EmbeddedResource Include="CodeBlocks\o_playercolor_fade.block" />
+    <EmbeddedResource Include="CodeBlocks\o_playercolor_trebuchet.block" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
